<resources>
    <string name="app_name">P01-DailyGoals</string>
    <string name="topic1">Read up on materials before class</string>
    <string name="today">Did I achieve this goal today?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="topic2">Arrive on time so as not to miss important part of the lesson</string>
    <string name="rj">My Personal reflection today</string>
    <string name="prob">Attempt the Problem myself</string>
    <string name="ok">Ok</string>
    <string name="done">Done</string>
</resources>
