<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".DailyGoal">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewT1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/topic1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewQ1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/today" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonY1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/radioButtonN1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewT2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/topic2"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewQ2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/today" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonY2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/radioButtonN2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewT3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prob" />

        <TextView
            android:id="@+id/textViewQ3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonY3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/radioButtonN3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewRJ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rj"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextRJ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ok" />

    </LinearLayout>

</ScrollView>
